# jsonrpc-playground

./: Cargo.toml  README.md
examples/: client.rs  server.rs
